--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <title>HTML5</title>
 </head>
 <body>
-	<h1>Hello, World!</h1>
-<script type="text/javascript" src="./script.js"></script>	
+  <h1>Hello, World!</h1>
+  <script type="text/javascript" src="./script.js"></script>	
 </body>
+</html>
